Prevent overflow from glaph

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html,body{
 	height:100%;
     max-width:100%;
 	max-height:100%;
+    position:relative;
     overflow:hidden;
 }
 
